--- a/style.css
+++ b/style.css
@@ -69,6 +69,8 @@ form .svgContainer:after {
 }
 
 #git{
+  
+
   background-color: #ff1654;
 }
 form .inputGroup {
@@ -126,6 +128,7 @@ form button {
   font-weight: 600;
   font-family: inherit;
   transition: background-color 0.2s ease-out;
+  cursor:pointer;
 }
 form button:hover, form button:active {
   background-color: #217093;
